--- a/idea-to-grant/src/index.css
+++ b/idea-to-grant/src/index.css
@@ -11,7 +11,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  color: #3c4142;
 }
+
+h1 {
+  font-weight: 500;
+  color: #000000;
+}
+
