--- a/idea-to-grant/src/FundingCalls.css
+++ b/idea-to-grant/src/FundingCalls.css
@@ -10,6 +10,7 @@
     cursor: pointer;
     margin: 20px 0 0 12px;
     vertical-align: top;
+    padding: 0;
 }
 
 .fundingCalls .tags-input {
@@ -30,7 +31,7 @@
     line-height: 1.3;
     box-sizing: border-box;
     border: 1px solid #ddd;
-    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    /*box-shadow: 0 1px 0 1px rgba(0,0,0,.04);*/
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
@@ -83,6 +84,6 @@
 }
 
 .fundingCalls .detail button {
-    padding: 3px 8px;
-    margin: 6px 0;
+    padding: 6px 20px;
+    margin: 12px 0;
 }
