--- a/idea-to-grant/src/Opportunity.css
+++ b/idea-to-grant/src/Opportunity.css
@@ -3,10 +3,16 @@
 }
 
 .opportunity {
-    border: 2px solid;
-    border-radius: 20px;
     margin: 15px;
     padding: 12px 12px 16px 12px;
+    border: 1px solid #ddd;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+.opportunity:hover {
+	border-color: #ccc;
 }
 
 h1 {
@@ -17,4 +23,13 @@ h1 {
 
 p {
     padding: 0 0 4px 0;
+}
+
+.opportunity a {
+    text-decoration: none;
+    color: #3595f6;
+}
+
+.opportunity .link {
+    margin-top: 8px;
 }
