--- a/idea-to-grant/src/FundingCalls.css
+++ b/idea-to-grant/src/FundingCalls.css
@@ -8,9 +8,9 @@
     width: 1.65em;
     height: 1.65em;
     cursor: pointer;
-    margin: 20px 0 0 12px;
+    margin: 22px 0 0 12px;
     vertical-align: top;
-    padding: 0;
+    padding: 0 0 1px 0;
 }
 
 .fundingCalls .tags-input {
@@ -23,6 +23,7 @@
 }
 
 .fundingCalls select {
+    /* https://stackoverflow.com/questions/56593500/change-the-dropdown-arrow-design */
     width: 94%;
     margin: 0 15px;
     padding: 8px;
@@ -31,7 +32,6 @@
     line-height: 1.3;
     box-sizing: border-box;
     border: 1px solid #ddd;
-    /*box-shadow: 0 1px 0 1px rgba(0,0,0,.04);*/
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
