--- a/idea-to-grant/src/Shortlist.css
+++ b/idea-to-grant/src/Shortlist.css
@@ -20,14 +20,52 @@
 
 .shortlist input[type=text] {
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8px 4px 8px 0px;
     box-sizing: border-box;
     width: 100%;  
+    border: 1px solid #ddd;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .shortlist .links {
     display: flex;
     flex-direction: row;
+    padding: 10px;
+    border: 1px solid #3595f6;
+    margin: 10px 0;
+}
+
+.shortlist .linksEditing {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    border: 0;
+    margin: 2px 0;
+}
+
+.shortlist .links {
+    display: flex;
+    flex-direction: row;
+    margin: 10px 0;
+}
+
+.shortlist .links:hover {
+    border: 1px solid transparent;
+    background-color: #3595f6;
+}
+
+.shortlist a.links {
+    text-decoration: none;
+}
+
+.shortlist .links:hover p {
+    color: white;
+}
+
+.shortlist .links p {
+    padding: 0;
 }
 
 .shortlist .links input[type=text] { 
@@ -50,4 +88,57 @@
     margin: 15px 15px 0 15px;
     justify-content: space-between;
     display: flex;
+}
+
+#remove {
+    border: 1px red solid;
+    border-radius: 50%;
+    width: 1.65em;
+    height: 20px;
+    cursor: pointer;
+    margin: 21px 0 0 4px;
+    vertical-align: top;
+    padding: 0 0 1px 0;
+    background-color: white;
+    color: red;
+    flex: 0 0 20px;
+}
+
+#remove:hover {
+    border: 1px transparent solid;
+    color: white;
+    background-color: red;
+}
+
+.shortlist select {
+    /* https://stackoverflow.com/questions/56593500/change-the-dropdown-arrow-design */
+    width: 60%;
+    margin: 8px 0 0 0;
+    padding: 8px;
+    display: block;
+    color: #444;
+    line-height: 1.3;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: white;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
+}
+.shortlist select::-ms-expand {
+	display: none;
+}
+.shortlist select:hover {
+	border-color: #ccc;
+}
+.shortlist select:focus {
+	border-color: #3595f6;
+	box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+	box-shadow: 0 0 0 3px -moz-mac-focusring;
+	color: #222;
+	outline: none;
 }
