--- a/idea-to-grant/src/Shortlist.css
+++ b/idea-to-grant/src/Shortlist.css
@@ -142,3 +142,14 @@
 	color: #222;
 	outline: none;
 }
+
+.shortlist #share {
+    margin-left: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    text-align: center;
+    padding: 6px 20px;
+    border-radius: 20px;
+    text-decoration: none;
+}
