--- a/idea-to-grant/src/Main.css
+++ b/idea-to-grant/src/Main.css
@@ -72,3 +72,34 @@ button:hover {
 hr {
   border: 1px solid #ddd;
 }
+
+ul.pagination {
+  list-style-type: none;
+  display: inline-block;
+  padding: 15px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination li {
+  display: inline-block;
+}
+
+.pagination .disabled a {
+  cursor: auto;
+}
+
+.pagination a {
+  padding: 8px 12px;
+}
+
+.pagination .active a {
+  background-color: #45a1ff !important;
+  color: white !important;
+}
+
+.pagination a:hover {
+  background-color: #f1f8ff;
+  color: black;
+}
