--- a/idea-to-grant/src/CurrentPage.css
+++ b/idea-to-grant/src/CurrentPage.css
@@ -10,9 +10,16 @@
 }
 
 .currentPage p {
-    width: 90%;
-    margin: 0 5%;
+    margin: -8px 0 12px 0;
+    font-size: 11px;
+}
 
+.currentPage p.error {
+    color: red;
+}
+
+.currentPage p.dateError {
+    margin: 8px 0 0 0;
 }
 
 .currentPage form {
@@ -111,6 +118,10 @@
     margin: 0 5% 5% 5%;
 }
 
+.currentPage label {
+    display: block;
+}
+
 .currentPage #radios { 
     margin: 0 0 5% 5%;
 }
@@ -135,36 +146,42 @@
     flex-direction: row;
 }
 
-.currentPage .dates input[type=text] { 
+.currentPage .dates input { 
+    margin: 8px 0 4px;
     width: 70%;
 }
-.currentPage .dates input[type=date] { 
-    padding: 12px 20px;
-    margin: 8px 0 18px 8px;
-    width: 60%;
-    border: 1px solid #ddd;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-}
 
-.currentPage .dates input[type=date]:hover {
-	border-color: #ccc;
-}
-.currentPage .dates input[type=date]:focus {
-	border-color: #3595f6;
-	box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
-	box-shadow: 0 0 0 3px -moz-mac-focusring;
-	color: #222;
-	outline: none;
+.currentPage .dates .date { 
+    margin-left: 6px;
+    width: 50%;
 }
 
 .currentPage #add {
-    margin: -8px 0 18px 0;
-    display: block;
+    margin: 8px 0 18px 0;
+    display: inline-block;
     padding-left: 20px;
     padding-right: 20px;
 }
+
+.currentPage #remove {
+    margin: 8px 0 18px 10px;
+    display: inline-block;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.currentPage #remove {
+    border: 1px red solid;
+    background-color: white;
+    color: red;
+}
+
+.currentPage #remove:hover {
+    border: 1px transparent solid;
+    color: white;
+    background-color: red;
+}
+
 
 .currentPage Tags {
     margin: 8px 0;
