--- a/idea-to-grant/src/FundingCalls.css
+++ b/idea-to-grant/src/FundingCalls.css
@@ -99,3 +99,15 @@
     color: white;
     background-color: red;
 }
+
+.fundingCalls #share {
+    margin-left: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    text-align: center;
+    padding: 6px 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
